[package]
name = "mono-diagram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = "4.5.4"
clap_derive = "4.5.4"
pest = "2.7.9"
pest_derive = "2.7.9"


[[bin]]
name = "mono-diagram"
path = "src/mono-diagram/main.rs"
